--- a/index.html
+++ b/index.html
@@ -679,9 +679,9 @@
     <div class="text-container3">
     <h2>DEAR SISI~MUAAAAA~~~~</h2><p></p>
   </div>
-  <div class="text-container4">
+<!--   <div class="text-container4">
     <h2>祝无敌帅气绝世聪明的郭一墨<br>新年顺遂 事事顺意 期末加油嘿嘿嘿</h2><p></p>
-  </div>
+  </div> -->
 </div>
 
 </body>
